# Ignimbrite

./: .appveyor.yml  .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md  WORKFLOW.md  main.cpp
.github/workflows/: ccpp.yml  linux.yml  macos.yml  projectcpp.yml  windows.yml
assets/textures/: Readme.txt
cmake/: FindVulkan.cmake
code/devices/opengl/: todo.txt
code/devices/vulkan/: CMakeLists.txt  VulkanContext.cpp  VulkanContext.h  VulkanDefinitions.h  VulkanDescriptorAllocator.cpp  VulkanDescriptorAllocator.h  VulkanDrawList.h  VulkanErrors.h  VulkanExtensions.cpp  VulkanExtensions.h  VulkanFence.cpp  VulkanFence.h  VulkanFramebuffer.h  VulkanObjects.h  VulkanRenderDevice.cpp  VulkanRenderDevice.h  VulkanSemaphore.h  VulkanSurface.cpp  VulkanSurface.h  VulkanUtils.cpp  VulkanUtils.h
code/engine/: AABB.cpp  AABB.h  CMakeLists.txt  Cache.cpp  Cache.h  CacheItem.cpp  CacheItem.h  Camera.cpp  Camera.h  Canvas.cpp  Canvas.h  Compilation.h  FileUtils.cpp  FileUtils.h  Frustum.h  Geometry.cpp  Geometry.h  GraphicsPipeline.cpp  GraphicsPipeline.h  IPostEffect.h  IPresentationPass.h  IRenderContext.h  IRenderDevice.cpp  IRenderDevice.h  IRenderDeviceDefinitions.h  IRenderEngine.cpp  IRenderEngine.h  IRenderable.cpp  IRenderable.h  IncludeMath.h  IncludeStd.h  Light.cpp  Light.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  MeshLoader.cpp  MeshLoader.h  ObjectID.h  (+31 more)
code/engine/include/ignimbrite/: CacheItem.h  Compilation.h  FileUtils.h  ObjectID.h  ObjectIDBuffer.h  Optional.h  Options.h  Platform.h  RenderDevice.h  RenderDeviceDefinitions.h  Sampler.h  Shader.h  ShaderReflection.h  Texture.h  Types.h
code/materials/: CMakeLists.txt  MaterialFullscreen.cpp  MaterialFullscreen.h  VertexLayoutFactory.cpp  VertexLayoutFactory.h
code/modules/: placeholder.txt
code/posteffects/: CMakeLists.txt  InverseFilter.cpp  InverseFilter.h  NoirFilter.cpp  NoirFilter.h
device/: CMakeLists.txt  DeviceDefinitions.h  RenderDevice.cpp  RenderDevice.h  ResourceID.h  ResourceIDBuffer.h
device/shader-reflection/: CMakeLists.txt
device/vulkan/: CMakeLists.txt
device/vulkan/include/: VulkanContext.h  VulkanDefinitions.h  VulkanDescriptorAllocator.h  VulkanDrawList.h  VulkanErrors.h  VulkanExtensions.h  VulkanFence.h  VulkanFramebuffer.h  VulkanObjects.h  VulkanRenderDevice.h  VulkanSemaphore.h  VulkanStructures.h  VulkanSurface.h  VulkanUtils.h
device/vulkan/sources/: VulkanContext.cpp  VulkanDefinitions.h  VulkanDescriptorAllocator.cpp  VulkanExtensions.cpp  VulkanRenderDevice.cpp  VulkanSurface.cpp  VulkanUtils.cpp
ignimbrite/: CMakeLists.txt
ignimbrite/include/ignimbrite/: Compilation.h  DeviceDefinitions.h  FileUtils.h  ObjectID.h  ObjectIDBuffer.h  Optional.h  Options.h  Options.h.in  Platform.h  RenderDevice.h  RenderDeviceDefinitions.h  ShaderReflection.h  Types.h
ignimbrite/sources/: FileUtils.cpp  RenderDevice.cpp
include/: Shader.h  UniformBuffer.h  ValidationLayers.h  VertexBuffer.h  VulkanTriangle.h
misc/: CMakeLists.txt  Compilation.h  FileUtils.cpp  FileUtils.h  ObjectID.h  ObjectIDBuffer.h  Optional.h  Platform.h  Types.h
renderDevice/: objectID.h  objectIDBuffer.h  renderDevice.h
renderer/: CMakeLists.txt
renderer/include/renderer/: DeviceDefinitions.h  FileUtils.h  ObjectID.h  ObjectIDBuffer.h  Optional.h  Options.h  RenderDevice.h  ShaderReflection.h
renderer/sources/: FileUtils.cpp  RenderDevice.cpp
resources/shaders/glsl/: frag3d.frag  fullscreen.frag  fullscreen.vert  gradient.frag  quadf.frag  quadv.vert  vert3d.vert
resources/shaders/spirv/: frag3d.spv  fullscreen.frag.spv  gradient.frag.spv  gradient.vert.spv  quadf.spv  quadv.spv  vert.spv  vert3d.spv
shaders/: frag.frag  shaders.txt  vert.spv  vert.vert
shaders/basic/: vert.spv  vertex.vert
shaders/glsl/: CanvasPrimitive.vert  CanvasPrimitiveFrag.frag  CanvasPrimitiveVert.vert  Fullscreen.frag  Fullscreen.vert  FullscreenQuad.frag  FullscreenQuadLinearize.frag  GenerateSpirv.bat  InverseFilter.frag  NoirFilter.frag  NoirFilter.vert  TestFrustum.frag  TestFrustum.vert  TestFrustumFrag.frag  TestFrustumVert.vert  Textured.frag  Textured.vert  frag3d.frag  frag3d.spv  fullscreen.frag  fullscreen.vert  gradient.frag  gradient.vert  vert3d.spv  vert3d.vert
shaders/glsl/pbr/: PBRShadowed.frag  PBRShadowed.vert  ShadowsPBR.frag  ShadowsPBR.vert
shaders/glsl/shadowmapping/: MeshFrag.frag  MeshPBRFrag.frag  MeshReflectiveShadowed.frag  MeshShadowed.frag  MeshShadowed.vert  MeshTexturedShadowed.frag  MeshTexturedShadowed.vert  MeshVert.vert  Shadows.vert  ShadowsVert.vert  TexturedShadows.frag  TexturedShadows.frag.spv  TexturedShadows.vert
shaders/spirv/: CanvasPrimitive.frag.spv  CanvasPrimitive.vert.spv  CanvasPrimitiveVert.spv  Fullscreen.frag.spv  Fullscreen.vert.spv  FullscreenQuad.frag.spv  FullscreenQuad.vert.spv  FullscreenQuadLinearize.frag.spv  Gradient.frag.spv  InverseFilter.frag.spv  NoirFilter.frag.spv  TestFrustum.vert.spv  TestFrustumFrag.spv  TestFrustumVert.spv  Textured.frag.spv  Textured.vert.spv  Triangle.vert.spv  frag3d.spv  fullscreen.frag.spv  fullscreen.vert.spv  gradient.vert.spv  vert3d.spv
shaders/spirv/pbr/: PBRShadowed.frag.spv  PBRShadowed.vert.spv  ShadowsPBR.frag.spv  ShadowsPBR.vert.spv
shaders/texture/: frag.spv  fragment.frag  vertex.vert
shaders/uniform/: vertex.vert
shaders/vertex/: frag.spv  fragment.frag  vert.spv  vertex.vert
source/: Shader.cpp  UniformBuffer.cpp  ValidationLayers.cpp  VertexBuffer.cpp  VulkanTriangle.cpp  main.cpp
tests/: CMakeLists.txt  TestFrustum.cpp  TestGlfwWindow.cpp  TestHelmetPBR.cpp  TestLightFrustum.cpp  TestObjectID.cpp  TestObjectID.h  TestRenderEngine.cpp  TestShadows.cpp  TestVulkan3D.cpp  TestVulkanApplication.cpp  TestVulkanOffscreen.cpp  TestVulkanOffscreenEnhanced.cpp  VulkanApplicationTest.h  VulkanStartUp.h  main.cpp
vulkan/: CMakeLists.txt  VulkanApplication.h  VulkanContext.cpp  VulkanContext.h  VulkanDevice.cpp  VulkanDevice.h  VulkanGlfw.h  VulkanQueueFamilyIndices.h  VulkanSwapChainSupportDetails.h  VulkanVertex.h  VulkanWindow.h
vulkanDevice/: vulkanRenderDevice.h
(+14 files in other folders)
