cmake_minimum_required(VERSION 3.11)
project(Tests)

add_executable(TestObjectID TestObjectID.cpp)
target_link_libraries(TestObjectID PRIVATE Ignimbrite)

if (WITH_GLFW)
    add_executable(TestGlfwWindow TestGlfwWindow.cpp)
    target_link_libraries(TestGlfwWindow PRIVATE Ignimbrite)
    target_link_libraries(TestGlfwWindow PRIVATE glfw)
endif()

if (WITH_VULKAN AND WITH_GLFW)
    add_executable(TestVulkanApplication TestVulkanApplication.cpp)
    target_link_libraries(TestVulkanApplication PRIVATE Ignimbrite)
    target_link_libraries(TestVulkanApplication PRIVATE VulkanDevice)
    target_link_libraries(TestVulkanApplication PRIVATE glfw)
endif()

if (WITH_VULKAN AND WITH_GLFW AND WITH_GLM AND WITH_STBIMAGE AND WITH_TINYOBJLOADER)
    add_executable(TestVulkan3D TestVulkan3D.cpp)
    target_link_libraries(TestVulkan3D PRIVATE Ignimbrite)
    target_link_libraries(TestVulkan3D PRIVATE VulkanDevice)
    target_link_libraries(TestVulkan3D PRIVATE glfw)
    target_link_libraries(TestVulkan3D PRIVATE stb-image)
    target_link_libraries(TestVulkan3D PRIVATE glm)
    target_link_libraries(TestVulkan3D PRIVATE tinyobjloader)
endif()
if (WITH_VULKAN AND WITH_GLFW)
    add_executable(TestVulkanOffscreen TestVulkanOffscreen.cpp)
    target_link_libraries(TestVulkanOffscreen PRIVATE Ignimbrite)
    target_link_libraries(TestVulkanOffscreen PRIVATE VulkanDevice)
    target_link_libraries(TestVulkanOffscreen PRIVATE glfw)
endif()